# bevy_liminal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: all_modes.rs  animated_mesh.rs  benchmark.rs  glowing.rs  intersecting.rs  msaa.rs  outline_mode.rs  simple.rs  transparent.rs
examples/benchmark/: constants.rs  grid.rs  hud.rs  main.rs  results.rs  scenario.rs  scenarios.rs  state.rs  tick.rs  viewport.rs
src/: camera.rs  compose.rs  constants.rs  extract.rs  flood.rs  hull_pipeline.rs  lib.rs  mask.rs  mask_pipeline.rs  node.rs  outline.rs  outline_builder.rs  outline_normals.rs  propagation.rs  queue.rs  render.rs  shaders.rs  texture.rs  types.rs  uniforms.rs  view.rs
src/shaders/: hull.wgsl  mask.wgsl  mod.rs
src/types/: mod.rs  outline_api.rs  render_cache.rs  render_data.rs
